--- a/sopcast-player.desktop
+++ b/sopcast-player.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Version=1.0
-Name=sopcast-player
+Version=0.2.0
+Name=SopCast Player
 GenericName=Internet Television
 Comment=GUI front-end to SopCast
 Exec=sopcast-player
