--- a/sopcast-player.desktop
+++ b/sopcast-player.desktop
@@ -7,4 +7,4 @@ Exec=sopcast-player
 Icon=sopcast-player
 Terminal=false
 Type=Application
-Categories=AudioVideo;Video;TV;
+Categories=Network;P2P;Video;TV;GTK;
