--- a/sopcast-player.desktop
+++ b/sopcast-player.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Version=1.0
+Encoding=UTF-8
 Name=SopCast Player
 GenericName=Internet Television
 Comment=GUI front-end to SopCast
