Committing changes suggested by community members
git-svn-id: http://sopcast-player.googlecode.com/svn/trunk@280 70e63da4-d337-11dd-8772-d1b041bf0e37

--- a/sopcast-player.desktop
+++ b/sopcast-player.desktop
@@ -4,8 +4,11 @@ Encoding=UTF-8
 Name=SopCast Player
 GenericName=Internet Television
 Comment=GUI front-end to SopCast
-Exec=sopcast-player
+TryExec=sopcast-player
+Exec=sopcast-player %U
 Icon=sopcast-player
 Terminal=false
 Type=Application
 Categories=GNOME;AudioVideo;P2P;Video;TV;GTK;
+StartupNotify=true
+MimeType=video/x-ms-wmv;x-scheme-handler/sop;
